remove local-docker file transfer